# maudfmt

./: Cargo.toml  justfile
src/: ast.rs  doc.rs  error.rs  format.rs  formatter.rs  kind.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  util.rs
src/parser/: combinator.rs  error.rs  expr.rs  ident.rs  literal.rs  mod.rs  path.rs  pattern.rs
src/snapshots/: maudfmt__format__tests__attributes.snap  maudfmt__format__tests__basic.snap  maudfmt__format__tests__comments_fold.snap  maudfmt__format__tests__empty_block.snap  maudfmt__format__tests__empty_lines.snap  maudfmt__format__tests__too_many_comments.snap  maudfmt__format__tests__trailing_line_comment.snap  maudfmt__format__tests__void_element.snap  maudfmt__lexer__tests__basic.snap  maudfmt__lexer__tests__comments.snap  maudfmt__parser__tests__basic.snap  maudfmt__parser__tests__comments.snap
