[package]
name = "maudfmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "7.1.0", features = ["fancy"] }
nom = "7.1.3"
proc-macro2 = { version = "1.0.78", features = ["span-locations"] }
quote = "1.0.35"
syn = { version = "2.0.51", features = ["full", "parsing", "visit"] }
thiserror = "1.0.57"
unicode-ident = "1.0.13"
unscanny = "0.1.0"

[dev-dependencies]
insta = { version = "1.40.0" }

[profile.dev.package]
insta.opt-level = 3
